refactor(architecture): 602 phase 1 — align module boundaries and user access
- ArchUnit: add 5 architecture rules (social/search/controller/entity boundaries)
- ArchUnit: add SQL fragment usage allowlist test
- Tests: migrate crosslayer tests from src/test to src/integrationTest
- Security: unify user access via CurrentUserProvider, /me endpoints
- Security: add RoleConstants with role hierarchy
- Social: extract LikeTargetGateway/LikeTargetType to decouple from content
- DTOs: add dedicated request/response DTOs across modules
- Search: refactor to use query DTOs instead of direct entity access
- Quiz/Learning: add *ForUser methods to prevent userId tampering
- Build: fix forkEvery=0, separate unit/integration test fork counts

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>